# gemini-powerpoint-sage

./: .coverage  .env.example  .gitignore  ABOUT.md  AGENT_FLOW_SUMMARY.md  CASE_SENSITIVITY_STANDARDIZATION.md  CHANGELOG.md  CODELAB_NOTES.md  DEPENDENCIES.md  DOCUMENTATION.md  DOCUMENTATION_SUMMARY.md  FINAL_SYSTEM_SUMMARY.md  FOLDER_BASED_ORGANIZATION_COMPLETE.md  GITHUB_DESCRIPTION.md  LANGUAGE_ENFORCEMENT_FIX.md  LANGUAGE_ENFORCEMENT_STRENGTHENING_FIX.md  MIGRATION_GUIDE.md  OUTPUT_DIR_IMPLEMENTATION.md  PROMPT_REWRITER_CHANGES.md  PROMPT_REWRITER_EMPTY_RESPONSE_FIX.md  PROMPT_REWRITER_FINAL_STATUS.md  PROMPT_REWRITER_FIX.md  PROMPT_REWRITER_SUCCESS_SUMMARY.md  PURE_YAML_SUMMARY.md  QUICK_REFERENCE.md  README.md  README_REFACTORED.md  REFACTORING_SUMMARY.md  REFACTOR_COMPLETE_SUMMARY.md  REFACTOR_PHASE1_SUMMARY.md  REFACTOR_PHASE2_SUMMARY.md  REFACTOR_PHASE3_SUMMARY.md  REFINED_SYSTEM.md  SHELL_SCRIPTS_STATUS.md  TASK3_OUTPUT_DIR_COMPLETE.md  TEST_COMMANDS.md  TRANSLATION_STYLE_FIX.md  UPDATES_SUMMARY.md  YAML_DRIVEN_SUMMARY.md  YAML_OUTPUT_DIR_UPDATE.md  (+20 more)
.devcontainer/: devcontainer.json
agents/: __init__.py  agent_factory.py  analyst.py  auditor.py  designer.py  designer_fallback.py  image_translator.py  overviewer.py  prompt.py  prompt_rewriter.py  refiner.py  supervisor.py  translator.py  (+3 more)
mcp_sample/: .env.example  00_START_HERE.md  GETTING_STARTED.md  GUIDE.md  README.md  agent_config.py  example_usage.py  mcp_tools.py  pyproject.toml  tool_callbacks.py  veo_server.py
mcp_sample/tests/: test_mcp_sample.py
veo_mcp/: .env.example  main.py  pyproject.toml
(+140 files in other folders)
